@@ -2,7 +2,7 @@
 # -*- coding: utf-8 -*-
 #
 # dtrx -- Intelligently extract various archive types.
-# Copyright © 2006-2009 Brett Smith <brettcsmith@brettcsmith.org>
+# Copyright © 2006-2010 Brett Smith <brettcsmith@brettcsmith.org>
 # Copyright © 2008 Peter Kelemen <Peter.Kelemen@gmail.com>
 #
 # This program is free software; you can redistribute it and/or modify it
@@ -45,9 +45,9 @@ try:
 except NameError:
     from sets import Set as set
 
-VERSION = "6.6"
+VERSION = "7.0"
 VERSION_BANNER = """dtrx version %s
-Copyright © 2006-2009 Brett Smith <brettcsmith@brettcsmith.org>
+Copyright © 2006-2010 Brett Smith <brettcsmith@brettcsmith.org>
 Copyright © 2008 Peter Kelemen <Peter.Kelemen@gmail.com>
 
 This program is free software; you can redistribute it and/or modify it
